--- a/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
@@ -9,7 +9,7 @@
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="60" height="11">
         <title>{{ __('Jobs NYC employer homepage', 'WNYC - Navigation') }}</title>
-        <use href="#logo-jnyc-horizontal"></use>
+        <use href="#logo-jobs-nyc-black-blue"></use>
       </svg>
     </a>
     <a class="hidden tablet:flex tablet:pr-2" href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
@@ -42,12 +42,12 @@
         href="{{ site.url }}"
       {% endif %}
     >
-      <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="100" height="18">
+      <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="196" height="22">
         <title>{{ __('Jobs NYC employer homepage', 'WNYC - Navigation') }}</title>
-        <use href="#logo-jnyc-horizontal"></use>
+        <use href="#logo-jobs-nyc-employer"></use>
       </svg>
     </a>
-    <h6 class="mt-0 tablet:pl-2 tablet:border-l tablet:border-solid tablet:border-slate-300">{{ __('Employers', 'WNYC - Navigation') }}</h6>
+    <h6 class="mt-0 tablet:hidden">{{ __('Employers', 'WNYC - Navigation') }}</h6>
   </div>
   <div>
     {% for menu_item in employer_header_menu.get_items %}
