remove aria-hidden=true

--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -2,7 +2,7 @@
   <div class="desktop:bg-white bg-slate-300 flex justify-between">
     <div class="flex">
       <a class="my-auto" href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
-        <svg aria-hidden="true" class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="110" height="18">
+        <svg class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="110" height="18">
           <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
           <use href="#logo-nyc-mycity"></use>
         </svg>
@@ -26,7 +26,7 @@
 <nav class="z-30 h-7 flex relative bg-white desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
   <a href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
-    <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+    <svg class="o-navigation__svg fill-text text-brand" width="110" height="18">
       <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
     </svg>
