--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -42,7 +42,7 @@
                 <h2 class="mb-4 font-[600]">{{ post.meta('container_header') }}</h2>
                 <div class="text-[16px] mb-4">{{ post.meta('container_subtitle') }}</div>
                 <div>
-                    <a class="btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="_blank" rel="noopener" href="post.meta('container_link').URL">
+                    <a class="btn btn-styled text-[#30374F] border-[#30374F] font-[600] pointer-events-auto" target="{{ post.meta('container_link').target }}" href="{{ post.meta('container_link').url }}">
                         {{ post.meta('container_link').title }}
                         <svg aria-hidden="true" class="icon-ui w-[20px] h-[20px] mr-0 rtl:flip">
                             <use href="#lucide-arrow-right"></use>
