--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -72,7 +72,7 @@
           <list>
             <li class="m-0">{{__('Check your search for typos', 'WNYC')}}</li>
             <li class="m-0">{{__('Use generic search terms', 'WNYC')}}</li>
-            <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'programs' : site.url ~ '/programs', '{{ JOBS_URL }}': site.url|last == '/' ? site.url ~ 'jobs' : site.url ~ '/jobs'})}}</li>
+            <li class="m-0">{{__('Browse our <a href="{{ PROGRAMS_URL }}">programs</a>', 'WNYC')|replace({'{{ PROGRAMS_URL }}': site.url|last == '/' ? site.url ~ 'jobseekers/programs' : site.url ~ '/jobseekers/programs'})}}</li>
           </list>
           <h5 style="margin-top: var(--nyco-typography-margin-bottom);">{{__('If you still can\'t find what you\'re looking for, {{ FEEDBACK }} to improve our site.', 'WNYC')|replace({'{{ FEEDBACK }}': 
             '<a class="link-icon" href="https://airtable.com/shrfQGpXvo9mmmHpJ">send us feedback <svg aria-hidden="true" class="icon-ui rtl:flip"><use href="#lucide-external-link"></use></svg></a>'})}}</h5>
