--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -20,7 +20,7 @@
       {% if this.posts %}
       <div>
         {% if this.guides %}
-        <div class="grid tablet:grid-cols-3">
+        <div class="grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-2">
         {% else %}
         <div class="scroll scroll-x scroll-x-snap-start scroll-peek tablet:scroll-reset grid grid-cols-1 tablet:grid-cols-2 desktop:grid-cols-3 gap-2 desktop:gap-3 py-2">
         {% endif %}
