--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -10,7 +10,7 @@
       <div class="layout-content">
         <div class="wrap">
       {% endif %}
-          <h1 class="mb-4 desktop:mb-5 text-[#FEFEFE]">{{ post.post_title }}</h1>
+          <span class="mb-4 desktop:mb-5 text-[50px] text-[#FEFEFE]">{{ post.post_title }}</span>
           <div class="text-[#FEFEFE] grid tablet:grid-cols-2 text-left">
             <div class="pb-3 tablet:pb-0 desktop:pb-0 tablet:pr-3 desktop:pr-3">
               <h3 class="mb-3">{{ post.meta('subtitle_1') }}</h3>
