--- a/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
@@ -2,14 +2,14 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Programs.php #}
 {# For homepage collection #}
-<article class="rounded border border-[#ECEFF2] p-3 w-[343px] h-[255px] tablet:w-[343px] tablet:h-[274px] desktop:w-[400px] desktop:h-[286px]">
+<article class="rounded border border-[#ECEFF2] p-3 w-full h-full">
   <header class="pb-2 desktop:pb-3">
     <img class="w-[140px] h-8 object-contain object-left" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
   </header>
   <div>
     <div class="pb-2 desktop:pb-3">
       <a href="{{ post.link }}">
-        <h5 class="pb-1">{{ post.employer_program_title }}</h5>
+        <h5 class="pb-1 font-[600]">{{ post.employer_program_title }}</h5>
       </a>
     </div>
     <div>
