For_landing_page_Mobile_button_resize

--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -24,12 +24,12 @@
                 <div class="grid bg-white p-4 w-full">
                     <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_1') }}</h3>
                     <p class="mx-auto mb-4 text-center">{{ post.meta('description_1') }}</p>
-                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url)  }}">{{ post.meta('button_label_1') }}</a>
+                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto w-full tablet:w-fit desktop:w-fit" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url)  }}">{{ post.meta('button_label_1') }}</a>
                 </div>
                 <div class="grid bg-white p-4 w-full">
                     <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_2') }}</h3>
                     <p class="mx-auto mb-4 text-center">{{ post.meta('description_2') }}</p>
-                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url)  }}">{{ post.meta('button_label_2') }}</a>
+                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto w-full tablet:w-fit desktop:w-fit" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url)  }}">{{ post.meta('button_label_2') }}</a>
                 </div>
             </div>
         </div>
