single_Program_margin_between_two_Element_Changed_For_Mobile

--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -40,7 +40,7 @@
           {% if section.section_title %}
           <div>
             <div>
-              <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3" data-active-navigation-item="focus">
+              <h3 class="h5 mb-4 tablet:mb-3 desktop:mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3" data-active-navigation-item="focus">
                 {{ section.section_title }}
               </h3>
             </div>
