the_left_and_right_container_sizes_ fixed

--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -6,9 +6,9 @@
     {% endif %}
     {# Desktop: image on the left if container_image_side is 'left', tablet and mobile: image on top #}
     {% if this.fields.container_image_side == 'left' %}
-      <div class="pb-3 tablet:pb-5 desktop:pb-0 desktop-w-500 desktop-h-400 tablet-h-400 mobile-h-300">
+      <div class="pb-3 tablet:pb-5 desktop:pb-0 w-full desktop:w-[500px]">
     {% else %}
-      <div class="desktop:hidden pb-5 tablet-h-400 mobile-h-300">
+      <div class="desktop:hidden pb-5">
     {% endif %}
         <img class="tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
       </div>
@@ -30,8 +30,8 @@
         <a class="mt-2 btn {{ container_button_class }} pointer-events-auto w-full tablet:w-fit desktop:w-fit" href="{{ function('convert_link_locale', this.fields.container_button_link, site.site_url, site.url) }}">{{ this.fields.container_button_text }}</a>
       </div>
     {% if this.fields.container_image_side == 'right' %}
-      <div class="desktop-w-500 desktop-h-400 hidden desktop:block">
-        <img class="bg-image-square tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
+      <div class="desktop:w-[500px] hidden desktop:block">
+        <img class="tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
       </div>
     {% endif %}
     </div>
