Mobile_HireTAlent_DevelopTalent_Feedback_buttons_resizes

--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -10,17 +10,17 @@
       <div class="layout-content">
         <div class="wrap">
       {% endif %}
-           <h1 class="font-[600] mb-4 desktop:mb-5 text-[50px] tablet:text-[55px] text-[#FEFEFE]">{{ post.post_title }}</h1>         
+           <h1 class="font-[600] mb-4 desktop:mb-5 text-[30px] tablet:text-[55px] text-[#FEFEFE]">{{ post.post_title }}</h1>         
             <div class="text-[#FEFEFE] grid tablet:grid-cols-2 text-left">
             <div class="pb-3 tablet:pb-0 desktop:pb-0 tablet:pr-3 desktop:pr-3">
               <h3 class="mb-3">{{ post.meta('subtitle_1') }}</h3>
               <p class="mb-3">{{ post.meta('description_1') }}</p>
-              <a class="btn bg-white border-[#30374F] text-[#30374F] hover:bg-[#30374F] hover:text-white pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url) }}">{{ post.meta('button_label_1') }}</a>
+              <a class="w-full tablet:w-fit desktop:w-fit btn bg-white border-[#30374F] text-[#30374F] hover:bg-[#30374F] hover:text-white pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_1'), site.site_url, site.url) }}">{{ post.meta('button_label_1') }}</a>
             </div>
             <div class="pt-3 tablet:pt-0 desktop:pt-0 border-t-3 tablet:border-t-0 desktop:border-t-0 tablet:border-l-3 desktop:border-l-3 border-slate-300 tablet:pl-3 desktop:pl-3">
               <h3 class="mb-3">{{ post.meta('subtitle_2') }}</h3>
               <p class="mb-3">{{ post.meta('description_2') }}</p>
-              <a class="btn bg-white border-[#30374F] text-[#30374F] hover:bg-[#30374F] hover:text-white pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url) }}">{{ post.meta('button_label_2') }}</a>
+              <a class="w-full tablet:w-fit desktop:w-fit btn bg-white border-[#30374F] text-[#30374F] hover:bg-[#30374F] hover:text-white pointer-events-auto" href="{{ function('convert_link_locale', post.meta('button_link_2'), site.site_url, site.url) }}">{{ post.meta('button_label_2') }}</a>
             </div>
           </div>
         </div>
