--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -6,7 +6,7 @@
         <h5>{{ options.feedback_prompt }}</h5>
         </div>
         <div class="tablet:float-right desktop:float-right">
-        <a class="btn btn-secondary pointer-events-auto" target="_blank" 
+        <a class="w-full tablet:w-fit desktop:w-fit btn btn-secondary pointer-events-auto" target="_blank" 
             {% if employer %}
             href="{{ options.feedback_form_link }}"
             {% else %}
