fix agency partners padding

--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="layout-content text-center py-5 tablet:py-6 desktop:py-7 px-2 tablet:px-7 max-w-[1232px] desktop:mx-auto">
+    <div class="layout-content text-center py-5 tablet:py-6 desktop:py-7 px-2 tablet:px-[104px] max-w-[1440px] desktop:mx-auto">
         <h2 class="mb-4">{{ post.meta('agency_partners_text') }}</h2>
 
         <div class="flex justify-center flex-wrap gap-3">
