--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,35 +1,39 @@
 {% if talent_portal_landing_page == false %}
-    <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative px-2 py-3 tablet:px-8 tablet:py-5 " role="contentinfo">
+    <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative px-2 py-3 tablet:px-8 tablet:py-5 max-w-[1440px] mx-auto" role="contentinfo">
     <div>
-    <nav class="o-attribution__flex items-start">
-        <div class="grid gap-y-4">
+    <nav class="o-attribution__flex">
+        <div class="flex flex-col tablet:flex-row desktop:flex-col w-fit tablet:w-full desktop:w-fit justify-start tablet:justify-between desktop:justify-start items-start tablet:items-center desktop:items-start pb-3 desktop:pb-0 gap-2 tablet:gap-5">
             <div>
-            <span class="footer-font">{{ employer ? options.employers_footer_tagline : options.job_seekers_footer_tagline }}</span>
+            <span class="footer-font">{{ options.feedback_prompt }}</span>
             </div>
-            <div class="tablet:float-left desktop:float-left">
-            {# TODO: feedback URL should come from global field + shortcode #}
-            <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" href="https://airtable.com/appHMkkbuN08pgjwz/shrfQGpXvo9mmmHpJ">Send us feedback</a>
+            <div class="tablet:float-right desktop:float-left">
+            <a class="btn btn-secondary pointer-events-auto" target="_blank" rel="noopener"
+                {% if employer %}
+                href="{{ options.feedback_form_link }}"
+                {% else %}
+                href="{{ options.feedback_form_link_jobseeker }}"
+                {% endif %}
+                >Send us feedback</a>
             </div>
         </div>
-        <div class="tablet:float-right desktop:float-right pb-2 tablet:pb-0 desktop:pb-0">
-        <h5>{{ options.feedback_prompt }}</h5>
-        </div>
-        <div class="tablet:float-right desktop:float-right">
-        <a class="btn btn-secondary pointer-events-auto" target="_blank" 
+        <div class="hidden desktop:grid grid-cols-2 gap-1 float-right w-[440px]">
             {% if employer %}
-            href="{{ options.feedback_form_link }}"
+                {% set footer_menu_to_use = employer_footer_menu %}
             {% else %}
-            href="{{ options.feedback_form_link_jobseeker }}"
+                {% set footer_menu_to_use = job_seeker_footer_menu %}
             {% endif %}
-            >Send us feedback</a>
+            {% for m in footer_menu_to_use.get_items %}
+                <a class="inline mr-2 desktop:mr-3 tablet:mr-3" href="{{ function('convert_link_locale', m.link, site.site_url, site.url) }}"
+                {% if m.attr_title %}title="{{ m.attr_title }}"{% endif %}
+                {% if m.target %}target="{{ m.target }}"{% endif %}
+                {% if m.xfn %}rel="{{ m.xfn }}"{% endif %}>
+                    {{ m.title }}
+                </a>
+            {% endfor %}
         </div>
     </nav>
-    <nav class="o-attribution__flex border-t border-slate-300 pt-3 items-start">
-        <div class="tablet:float-left desktop:float-left pb-2 tablet:pb-0 desktop:pb-0">
-        <span>
-        {{ employer ? options.employers_footer_tagline : options.job_seekers_footer_tagline }}</span>
-        </div>
-        <div class="grid grid-cols-2 gap-1 tablet:float-right desktop:float-right pt-2 tablet:pt-0">
+    <nav class="o-attribution__flex border-t border-[#ADB2B9] pt-3 items-start desktop:hidden">
+        <div class="grid grid-cols-2 gap-1 tablet:float-right w-full tablet:w-fit">
             {% if employer %}
                 {% set footer_menu_to_use = employer_footer_menu %}
             {% else %}
