post_content_implimented

--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -45,8 +45,10 @@
         </div>
       </header>
     </div>
-
     <section class="layout-content">
+      <div>
+        <span>{{post.content}}</span>
+      </div>
       <div class="wrap">
         <div class="pb-8 mb-8">
           {% if newsletter_message %}
