fixed font sizes on employer homepage

--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -13,7 +13,7 @@
         <img class="tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
       </div>
       <div class="desktop-max-h-304 desktop-w-660">
-        <h2 class="text-[25px] tablet:text-[44px] mb-3 tablet:mb-4">{{ this.heading }}</h2>
+        <h2 class="text-[30px] tablet:text-[40px] desktop:text-[44px] mb-3 tablet:mb-4">{{ this.heading }}</h2>
         {{ this.description }}
 
         {% set container_button_class = '' %}
