--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -42,13 +42,11 @@
           %}
 
           <h1 id="page-heading" class="o-header__title">{{ post.title }}</h1>
+            <div>{{options.newsletter_description}}</div>
         </div>
       </header>
     </div>
     <section class="layout-content">
-      <div>
-        <span>{{post.content}}</span>
-      </div>
       <div class="wrap">
         <div class="pb-8 mb-8">
           {% if newsletter_message %}
