remove commented code

--- a/wp-content/themes/workingnyc/views/job-boards/job-board.twig
+++ b/wp-content/themes/workingnyc/views/job-boards/job-board.twig
@@ -1,7 +1,7 @@
 {# @Type   Component #}
 {# @For    Post Type #}
 <article class="c-card h-full">
-  <div>{{ post.job_board_title }}</div>
+  <div>{{ post.post_title }}</div>
   <div>{{ post.description }}</div>
   <div>{{ post.agency }}</div>
   <a href="{{ post.cta_link.url }}" target="{{ post.cta_link.target }}">{{ post.cta_link.title }}</a>
