--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -52,7 +52,7 @@
       </span>{% endif %}
     </p>{% endif %}
 
-    {% if post.intro or post.populations %}<div class="c-card__summary">
+    {% if post.intro %}<div class="c-card__summary">
       <p>
         {{ post.preview }}
       </p>
