--- a/wp-content/themes/workingnyc/views/programs/program.twig
+++ b/wp-content/themes/workingnyc/views/programs/program.twig
@@ -52,11 +52,13 @@
       </span>{% endif %}
     </p>{% endif %}
 
-    {% if post.intro %}<div class="c-card__summary">
-      <p>
-        {{ post.preview }}
-      </p>
-    </div>{% endif %}
+    {% if post.preview %}
+      <div class="c-card__summary">
+        <p>
+          {{ post.preview }}
+        </p>
+      </div>
+    {% endif %}
 
     <ul class="c-card__features">
       {% if post.services %}<li>
