--- a/wp-content/themes/workingnyc/views/archive.twig
+++ b/wp-content/themes/workingnyc/views/archive.twig
@@ -21,7 +21,21 @@
           <header class="o-header">
             <div>
               <nav class="o-header__breadcrumbs" aria-label="Breadcrumb">
-                <a href="{{ site.url }}">{{ __('Home', 'WNYC') }}</a>
+                <a data-js="home-link" 
+                {% if employer == true %}
+                  {% if options.employers_link is defined %}
+                    href="{{ options.employers_link }}"
+                  {% else %}
+                    href="{{ site.url }}"
+                  {% endif %}
+                {% else %}
+                  {% if options.job_seekers_link is defined %}
+                    href="{{ options.job_seekers_link }}"
+                  {% else %}
+                    href="{{ site.url }}"
+                  {% endif %}
+                {% endif %}
+                >{{ __('Home', 'WNYC') }}</a>
 
                 <svg aria-hidden="true" class="o-header__breadcrumbs-chevron icon-ui rtl:flip">
                   <use href="#lucide-chevron-right"></use>
