--- a/wp-content/themes/workingnyc/views/announcement.twig
+++ b/wp-content/themes/workingnyc/views/announcement.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="bg-scale-2">
   <main class="bg-scale-1" id="content">
-    <div class="layout-content sticky top-0 bg-scale-1 z-10">
+    <div class="site-max-width sticky top-0 bg-scale-1 z-10">
       {% if employer == true %}
         {% if options.employers_link is defined %}
           {% set home_link = options.employers_link %}
@@ -32,7 +32,7 @@
     </div>
 
     {# Header Section #}
-    <div class="layout-content">
+    <div class="site-max-width">
       <header class="o-header">
         <div>
           <h1 id="page-heading" class="o-header__title">{{ post.title }}</h1>
@@ -56,7 +56,7 @@
     </div>
 
     {% if post.content %}<section class="bg-scale-2 clearfix">
-      <div class="layout-content pt-utility-anchor pb-8 mb-8">
+      <div class="site-max-width pt-utility-anchor pb-8 mb-8">
         <div class="py-4 wrap">
           {{ post.content }}
         </div>
