--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -1,7 +1,7 @@
 {# @Type   Component #}
 {# @For    Custom Field #}
 {# @Class  includes/collection.php #}
-<section class="page-max" data-active-navigation-observe-item="heading" id="{{ this.heading|trim|replace({' ': '-'})|lower }}">
+<section class="site-max-width" data-active-navigation-observe-item="heading" id="{{ this.heading|trim|replace({' ': '-'})|lower }}">
   <div class="py-4 tablet:py-5 desktop:py-6">
     {% if this.display == 'container' %}
       {% include 'components/container.twig' %}
@@ -44,7 +44,7 @@
       {% endif %}
 
       {% if this.archive.link %}
-      <div class="layout-content">
+      <div>
         <div class="wrap tablet:pt-6">
           <a class="btn btn-primary btn-next w-full" href="{{ this.archive.link }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
             <span>{{ this.archive.label }}</span>
@@ -87,7 +87,7 @@
     {% endif %}
 
     {% if this.display == 'gallery' %}
-    <div class="layout-content{% if this.posts %} pb-2 desktop:pb-5{% endif %}">
+    <div class="{% if this.posts %} pb-2 desktop:pb-5{% endif %}">
       <div class="wrap">
         <h2 class="h3 text-[30px] tablet:text-[40px] desktop:text-[44px] text-alt mt-0" data-active-navigation-item="focus">{{ this.heading }}</h2>
 
@@ -115,7 +115,7 @@
     {% endif %}
 
     {% if this.archive.link %}
-    <div class="layout-content">
+    <div>
       <div class="wrap tablet:pt-6">
         <a class="btn btn-primary btn-next w-full" href="{{ this.archive.link }}"{% if this.archive.external %} target="_blank" rel="noopener"{% endif %}>
           <span>{{ this.archive.label }}</span>
