--- a/wp-content/themes/workingnyc/views/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/newsletter.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="bg-scale-2">
   <main class="bg-scale-1" id="content">
-    <div class="layout-content sticky top-0 bg-scale-1 z-10">
+    <div class="site-max-width sticky top-0 bg-scale-1 z-10">
       {% if employer == true %}
         {% if options.employers_link is defined %}
           {% set home_link = options.employers_link %}
@@ -28,7 +28,7 @@
     </div>
 
     {# Header Section #}
-    <div class="layout-content">
+    <div class="site-max-width">
       <header class="o-header">
         <div>
           {% include 'components/breadcrumbs.twig' with {
@@ -46,7 +46,7 @@
         </div>
       </header>
     </div>
-    <section class="layout-content">
+    <section class="site-max-width">
       <div class="wrap">
         <div class="pb-8 mb-8">
           {% if newsletter_message %}
